SERVER-44059 Make _makeCoefficientLow in decimal128.h static